src/tests/testfiles/binary-operators/22.txt
testfiles/binary-operators/22.c:2:5: error: invalid operands to binary '%' (have 'char *' and 'float')
"a" % 4.0;
^
